Stop pill from wrapping

--- a/public/style.css
+++ b/public/style.css
@@ -135,18 +135,21 @@ h1 span:nth-child(8) {
 }
 
 section {
-  animation: 1s cubic-bezier(0,.68,.19,1) 2250ms 1 fade-in forwards;
-  background: var(--sky-gradient-dark);
+  display: flex;
+  justify-content: center;
   position: absolute;
+  width: 100%;
   top: calc(12% + 135px);
-  left: 50%;
+  animation: 1s cubic-bezier(0,.68,.19,1) 2250ms 1 fade-in forwards;
+  opacity: 0;
+  z-index: 10;
+}
+
+.pill {
+  background: var(--sky-gradient-dark);
   text-shadow: 2px 2px 0 var(--mountain-shadow);
-  transform: translate(-50%, -50%);
   padding: 10px 17px;
   border-radius: 5px;
-  opacity: 0;
-  /* opacity: 1; */
-  z-index: 10;
 }
 
 @keyframes fade-in {
